# MusicRefactor

./: 00_READ_ME_FIRST.md  ANALYSIS_SUMMARY.md  ELECTRON_FIX.md  FILE_GUIDE.md  MONITOR_NPM_INSTALL.md  NODE_VERSION_OK.md  NPM_INSTALL_FIX.md  README.md  STARTUP_GUIDE.md  fix-electron.bat  fix-npm-install.bat  monitor-npm.bat  package-lock.json  startup.bat
backend/: CMakeLists.txt
backend/include/: api_server.h  audio_engine.h  database_manager.h  playlist_manager.h  plugin_manager.h
backend/src/: main.cpp
backend/src/core/: audio_engine.cpp  playlist_manager.cpp
backend/src/network/: api_server.cpp
docs/: ARCHITECTURE.md  BUILD.md
frontend/: package-lock.json  package.json  v14.17.5）
frontend/src/components/: Player.tsx  Playlist.tsx
frontend/src/pages/: Search.tsx
frontend/src/services/: api.ts
